--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -539,8 +539,10 @@ limitations under the License.
 
     .mx_ReadReceiptGroup {
         position: absolute;
+
         // as close to right gutter without clipping as possible
-        right: -78px;
+        inset-inline-end: calc(-1 * var(--ReadReceiptGroup_EventBubbleTile-spacing-end));
+
         // (EventTileLine.line-height - ReadReceiptGroup.height) / 2
         // this centers the ReadReceiptGroup if we’ve got a single line
         bottom: calc(($font-18px - 24px) / 2);
@@ -691,15 +693,16 @@ limitations under the License.
 
             .mx_MessageActionBar {
                 inset-inline-start: initial; // Reset .mx_EventTile[data-layout="bubble"][data-self="false"] .mx_MessageActionBar
-                right: 48px; // align with that of right-column bubbles
+                inset-inline-end: 48px; // align with that of right-column bubbles
             }
 
             .mx_ReadReceiptGroup {
-                right: -18px; // match alignment to RRs of chat bubbles
+                // match alignment to RRs of chat bubbles
+                inset-inline-end: calc(-1 * var(--ReadReceiptGroup_EventBubbleTile-spacing-end) + 60px);
             }
 
             &::before {
-                right: 0; // match alignment of the hover background to that of chat bubbles
+                inset-inline-end: 0; // match alignment of the hover background to that of chat bubbles
             }
         }
     }
